# oldir

./: Cargo.toml  README.md
dirs_info/: Cargo.toml
dirs_info/src/: lib.rs  main.rs
dirs_report/: Cargo.toml
dirs_report/src/: main.rs
oldir/: Cargo.toml
oldir/does_not_work/: recursive_opaque_type.rs
oldir/src/: main.rs
oldirs_report/: Cargo.toml
oldirs_report/src/: main.rs  prefix_buffer.rs
