[package]
name = "oldir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
clap = { version = "4.1.4", features = ["derive"] }
fs-err = { version = "2.9.0", features = ["tokio"] }
futures = "0.3.25"
humantime = "2.1.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }

[dev-dependencies]
filetime = "0.2"
