[package]
name = "oldir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
fs-err = "2.9.0"
humantime = "2.1.0"

[dev-dependencies]
filetime = "0.2"
